tests/tooling/fixtures/native/recovery/positive/message_send_nonzero_unary_receiver_fast_path.objc3
module MessageSendNonzeroUnaryReceiverFastPath;

fn main() -> i32 {
  return [(!0) ping];
}
