tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_fn_extern.objc3
// Negative fixture: declaration qualifiers must precede `fn`.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierFnExtern;

fn extern add(lhs: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}
